@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Feb 2015;  <chymera@gentoo.org> pythontex-9999.ebuild:
+  updated live ebuild
+
   17 Feb 2015;  <chymera@gentoo.org> pythontex-0.14.ebuild:
   repoman stuff
 
